--- a/Controller/ControllerTest/ControllerTest.cbp
+++ b/Controller/ControllerTest/ControllerTest.cbp
@@ -22,6 +22,7 @@
 		</Compiler>
 		<Unit filename="../Controller/Controller.ino" />
 		<Unit filename="../Controller/bluetooth_interconnect.h" />
+		<Unit filename="../Controller/byte_queue.h" />
 		<Unit filename="../Controller/date_time.h" />
 		<Unit filename="../Controller/interconnect.h" />
 		<Unit filename="../Controller/json_decoder.h" />
@@ -38,9 +39,11 @@
 		<Unit filename="../Controller/timer.h" />
 		<Unit filename="../Controller/wifi_helper.h" />
 		<Unit filename="arduino_pins.h" />
+		<Unit filename="arduino_print.h" />
 		<Unit filename="arduino_stream.h" />
 		<Unit filename="arduino_string.h" />
 		<Unit filename="main.cpp" />
+		<Unit filename="test_byte_queue.h" />
 		<Unit filename="test_date_time.h" />
 		<Unit filename="test_interconnect.h" />
 		<Unit filename="test_json_decoder.h" />
